[package]
name = "f_ck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1  # enable tail call optimizations

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "compiled"
harness = false

[[bench]]
name = "dispatch"
harness = false
